--- a/css/style.css
+++ b/css/style.css
@@ -58,20 +58,53 @@ li{
 }
 
 
-.debug main{
-    min-height: 400px;
-    background-color:#00008B;
-    padding: 20px;
+.jumbo{
+    min-height: 500px;
+    background-color: #00008B;
 }
 
 .row.jumbo{
     justify-content: center;
-
+    align-items: center;
 }
-.col-jumbo{
-    border: 2px dashed black;
+
+.jumbo-image{
+    min-height: 400px;
     min-width: 400px;
-    min-height: 300px;
     background-color: #EE82EE;
+    border: 2px dotted black;
+}
+.image{
+    min-height: 500px ;
+    background-color: yellow;
+    border: 1px solid black;
 }
 
+.row.intro{
+    height: 500px;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.column-image{
+    background-color:#1E90FF ;
+    border: 2px dotted black;
+    min-height: 200px;
+    flex-basis: 75%;
+}
+
+.column-text{
+    min-height: 200px;
+    background-color:#FFC0CB ;
+    border: 2px dotted black;
+    flex-basis: 25%;
+
+}
+
+.row.intro.reverse{
+    flex-direction: row-reverse;
+    height: 500px;
+    justify-content: center;
+    align-items: center;
+}
