--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,6 @@
 	box-sizing: border-box;
 }
 
-img {
-	max-width: 100%;
-}
 
 
 .container {  /* allineamento intero doc */
@@ -67,7 +64,7 @@ body{
 
 .jumbo{
     min-height: 500px;
-    background-color: #00008B;
+
 }
 
 .row.jumbo{
@@ -82,6 +79,7 @@ body{
     border: 2px dotted black;
 }
 .image{
+    padding: 120px 0;
     min-height: 500px ;
 
     border: 1px solid black;
@@ -90,34 +88,40 @@ body{
     background-color: #D3D3D3;
 }
 .row.intro{
-    height: 500px;
     justify-content: center;
     align-items: center;
 }
 
+h2{
+    font-size: 48px;
+    font-weight: 800;
+    margin: 20px 0;
+}
+p{
+    font-size: 20px;
 
+}
 .column-image{
-    background-color:#1E90FF ;
-    border: 2px dotted black;
-    min-height: 200px;
-    flex-basis: 75%;
+    flex-basis: 60%;
 }
 
 .column-text{
-    min-height: 200px;
-    background-color:#FFC0CB ;
-    border: 2px dotted black;
-    flex-basis: 25%;
+    flex-basis: 40%;
 
 }
 
 .row.intro.reverse{
     flex-direction: row-reverse;
-    height: 500px;
     justify-content: center;
     align-items: center;
 }
 
+.download{
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
 .row-footer{
     justify-content: center;
     align-content: center;
@@ -136,7 +140,7 @@ body{
 }
 
 footer{
-    background-color: rgb(54, 53, 53);
+    background-color: #f6f6f6;
 }
 
 .column-footer.big{
@@ -144,4 +148,15 @@ footer{
     flex-basis: calc(100% / 6);
 
 
+}
+
+.download>button{
+    line-height:40px;
+    border-radius: 20px;
+    width: 180px;
+    text-align: center;
+    cursor: pointer;
+    font-size: 14px ;
+    border: none;
+    background-color: #5865f2;
 }
